修改Cloth穿戴层次逻辑

--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -190,7 +190,7 @@ RUTEST2:
 		Terrain: Tiberium, BlueTiberium
 		RequiresCondition: !inside-tunnel && usechemicalitem
 	ExplodeWeapon@chemical:
-		Weapon: ProtonFlameCluster
+		Weapon: ChemicalCloudLauncher
 		Interval: 50
 		Offset: 0,0,1024
 		RequiresCondition: usechemicalitem
