装备ui操作模式修改

--- a/mods/common/chrome/ingame-perf.yaml
+++ b/mods/common/chrome/ingame-perf.yaml
@@ -8,6 +8,7 @@ Container@PERF_WIDGETS:
 			Width: 200
 			Height: 200
 			Contrast: true
+			IgnoreMouseOver: true
 		Background@GRAPH_BG:
 			ClickThrough: true
 			Background: dialog4
