--- a/mods/ts/weapons/otherweapons.yaml
+++ b/mods/ts/weapons/otherweapons.yaml
@@ -560,6 +560,7 @@ WalkImpact:
 			Concrete: 80
 		DamageTypes: TriggerProne, CrushedDeath
 		ValidTargets: Infantry, Crushable
+		InvalidTargets: Rutest
 		ValidRelationships: Neutral, Enemy
 	Warhead@1Dam: Spread3DDamage
 		Damage: 10000
@@ -573,6 +574,7 @@ WalkImpact:
 			Concrete: 75
 		DamageTypes: TriggerProne, CrushedDeath
 		ValidTargets: Ground, Water, Air, Trees
+		InvalidTargets: Rutest
 		ValidRelationships: Neutral, Enemy
 	Warhead@2Eff: CreateEffect
 		Image: cloud
