继续完善rpgui系统

--- a/mods/common/chrome/ingame-perf.yaml
+++ b/mods/common/chrome/ingame-perf.yaml
@@ -9,6 +9,7 @@ Container@PERF_WIDGETS:
 			Height: 200
 			Contrast: true
 			IgnoreMouseOver: true
+			ClickThrough: true
 		Background@GRAPH_BG:
 			ClickThrough: true
 			Background: dialog4
