修复carryall Shift unload导致模式切换

--- a/mods/ts/rules/aircraft.yaml
+++ b/mods/ts/rules/aircraft.yaml
@@ -447,6 +447,7 @@ TRNSPORT:
 		IsPlayerPalette: true
 	GrantConditionOnDeploy:
 		RequiresCondition: !AImicroManage
+		PauseOnCondition: carried
 		DeployedCondition: autocarry
 		CanDeployOnRamps: true
 		SkipMakeAnimation: true
