战机支援可选方向

--- a/mods/ts/rules/aircraft.yaml
+++ b/mods/ts/rules/aircraft.yaml
@@ -272,6 +272,8 @@ ORCA.ASSULT:
 	Inherits: ORCA
 	-Selectable:
 	-SelectionDecorations:
+	-Buildable:
+	-UpdatesPlayerStatistics:
 	RejectsOrders:
 	Interactable:
 	-AttackAircraft:
