--- a/mods/ts/rules/gdi-structures.yaml
+++ b/mods/ts/rules/gdi-structures.yaml
@@ -492,8 +492,9 @@ GARADR:
 		#ArrowSequence: arrow
 		#ClockSequence: clock
 		#CircleSequence: circles
-		#UseDirectionalTarget: True
-		#DirectionArrowAnimation: paradirection
+		UseDirectionalTarget: True
+		DirectionArrowAnimation: airstrikedirection
+		DirectionArrowPalette: mouse
 		SupportPowerPaletteOrder: 40
 
 
