Add GuardsSelection from CA

--- a/mods/ts/rules/gdi-infantry.yaml
+++ b/mods/ts/rules/gdi-infantry.yaml
@@ -95,6 +95,9 @@ MEDIC:
 		Delay: 60
 	Passenger:
 		CustomPipType: red
+	GuardsSelection:
+		ValidTargets: Infantry
+		MaxTargets: 6
 
 JUMPJET:
 	Inherits: ^Soldier
