--- a/mods/ts/rules/nod-vehicles.yaml
+++ b/mods/ts/rules/nod-vehicles.yaml
@@ -385,6 +385,9 @@ REPAIR:
 		FacingTolerance: 0
 	AutoTarget:
 		ScanRadius: 8
+	GuardsSelection:
+		ValidTargets: Vehicle
+		MaxTargets: 6
 
 WEED:
 	Inherits: ^Tank
