Use Stop button on (production) buildings to reset rally point fixes #20414

--- a/mods/ts/rules/gdi-structures.yaml
+++ b/mods/ts/rules/gdi-structures.yaml
@@ -121,6 +121,8 @@ GAPILE:
 		IsPlayerPalette: false
 		LineWidth: 2
 		ForceSetType: Infantry
+	CommandBarBlacklist:
+		DisableStop: false
 	Exit@1:
 		SpawnOffset: -512,768,0
 		ExitCell: 1,2
@@ -216,6 +218,8 @@ GAWEAP:
 		IsPlayerPalette: false
 		LineWidth: 2
 		ForceSetType: Vehicle
+	CommandBarBlacklist:
+		DisableStop: false
 	Exit@1:
 		SpawnOffset: -384,-384,0
 		ExitCell: 3,1
@@ -292,6 +296,8 @@ GAHPAD:
 		IsPlayerPalette: false
 		LineWidth: 2
 		ForceSetType: Air
+	CommandBarBlacklist:
+		DisableStop: false
 	Production:
 		Produces: Air
 		PauseOnCondition: empdisable
@@ -372,6 +378,8 @@ GADEPT:
 		Palette: mouse
 		IsPlayerPalette: false
 		LineWidth: 2
+	CommandBarBlacklist:
+		DisableStop: false
 	WithIdleOverlay@LIGHT:
 		RequiresCondition: !build-incomplete
 		Sequence: idle-light
