--- a/mods/ts/rules/defaults.yaml
+++ b/mods/ts/rules/defaults.yaml
@@ -722,6 +722,7 @@
 		Speed: 71
 		AlwaysTurnInPlace: true
 		Locomotor: foot
+		TurningWhileMoving: true
 	TurnOnIdle:
 	Selectable:
 		DecorationBounds: 452, 1387, 0, -543
